# libgoogle

./: .flake8  Makefile  README.md  prompt  pyproject.toml
libgoogle/: __init__.py  libgoogle.py
tests/: test_libgoogle.py
